log/build_2023-06-04_15-09-51/launcher/stdout_stderr.log
running egg_info
writing ../../build/launcher/launcher.egg-info/PKG-INFO
writing dependency_links to ../../build/launcher/launcher.egg-info/dependency_links.txt
writing entry points to ../../build/launcher/launcher.egg-info/entry_points.txt
writing requirements to ../../build/launcher/launcher.egg-info/requires.txt
writing top-level names to ../../build/launcher/launcher.egg-info/top_level.txt
reading manifest file '../../build/launcher/launcher.egg-info/SOURCES.txt'
writing manifest file '../../build/launcher/launcher.egg-info/SOURCES.txt'
running build
running build_py
copying launcher/xacro_urdf.py -> /home/romeperl/ssl_robot_challenge/build/launcher/build/lib/launcher
running install
running install_lib
copying /home/romeperl/ssl_robot_challenge/build/launcher/build/lib/launcher/xacro_urdf.py -> /home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher
byte-compiling /home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher/xacro_urdf.py to xacro_urdf.cpython-310.pyc
  File "/home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher/xacro_urdf.py", line 65
    output="screen"
           ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/launcher/launcher.egg-info to /home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher-0.0.0-py3.10.egg-info
running install_scripts
Installing xacro_urdf_viewer script to /home/romeperl/ssl_robot_challenge/install/launcher/lib/launcher
writing list of installed files to '/home/romeperl/ssl_robot_challenge/build/launcher/install.log'
